# cpp_starter

./: CMakeLists.txt  README.md  conanfile.txt
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
test/: CMakeLists.txt
